--- a/inst/htmlwidgets/lib/d3Survival-0.1/CSS/d3SurvivalStyle.css
+++ b/inst/htmlwidgets/lib/d3Survival-0.1/CSS/d3SurvivalStyle.css
@@ -10,14 +10,17 @@ path.confidence {
 
 svg .axis text, svg text {
     font-family: 'Consolas';
+    fill: #e9e9e9;
+    -webkit-touch-callout: none; 
+    -webkit-user-select: none; 
+    -khtml-user-select: none; 
+    -moz-user-select: none; 
+    -ms-user-select: none; 
+    user-select: none; 
 }
 
 svg {
     background-color: #232b2b;
-}
-
-svg text {
-    fill: #e9e9e9
 }
 
 
